* Bug #35654: split icons into different files according to size black/white
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54316 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.37-1) unstable; urgency=medium
+
+  * Bug #35654: split icons into different files according to size black/white
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 10 Oct 2014 13:38:34 +0200
+
 univention-management-console-frontend-theme (0.0.36-1) unstable; urgency=medium
 
   * Bug #35654: IE9 fixes for header buttons and background pattern
