Bug #36085 USS: Prevent network restart on commit
Set UCRV interfaces/restart/auto while USS is running.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54320 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.10-1) unstable; urgency=low
+
+  * Bug #36085: Prevent network restart on commit
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 10 Oct 2014 12:48:12 +0200
+
 univention-system-setup (8.1.9-2) unstable; urgency=low
 
   * Bug #35653: Load network settings when in Debian installer mode
