Bug #36124 test: Check for APT key rings
Check that only univention-archive-key is installed

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54321 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.19-1) unstable; urgency=low
+
+  * Bug #36124: Check for APT key rings
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 10 Oct 2014 13:40:45 +0200
+
 ucs-test (5.0.18-1) unstable; urgency=low
 
   * Bug #35900: add some printed debug info
