* Bug #35654: fix button ordering, don't display standby animation only in the module part because module buttons can the be clicked, fix some login dialog issues, don't show the overview related widgets when no overview is visible (e.g. only one module available)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54327 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,12 @@
+univention-management-console-frontend (4.1.37-1) unstable; urgency=low
+
+  * Bug #35654: fix button ordering, don't display standby animation only in
+  	the module part because module buttons can the be clicked, fix some login
+  	dialog issues, don't show the overview related widgets when no overview is
+  	visible (e.g. only one module available)
+
+ -- Florian Best <best@univention.de>  Fri, 10 Oct 2014 17:31:44 +0200
+
 univention-management-console-frontend (4.1.36-1) unstable; urgency=medium
 
   Bug #35654:
