--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.39-1) unstable; urgency=medium
+
+  * Bug #35654: adjust background gradient, fix RadioButton/CheckBox margins
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 10 Oct 2014 19:41:00 +0200
+
 univention-management-console-frontend-theme (0.0.38-1) unstable; urgency=medium
 
   * Bug #35654: add styles for RadioButtons + CheckBoxes
