* Bug #35653: Fix nameserver issues
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54336 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.10-3) unstable; urgency=low
+
+  * Bug #35653: Fix nameserver issues
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 10 Oct 2014 19:54:29 +0200
+
 univention-system-setup (8.1.10-2) unstable; urgency=low
 
   * Bug #35653: Fix flavor issues, further restricting app selection
