--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.21-1) unstable; urgency=low
+
+  * 00_base/25check-permissions: adjust to UCS 4.0 (Bug #35880)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sun, 12 Oct 2014 14:29:12 +0200
+
 ucs-test (5.0.20-1) unstable; urgency=low
 
   * Removed 00_base/16packages_default because
