* 00_base/26check_logfiles_general: Added some more files to the   ignore list (Bug #35881)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54343 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (5.0.22-1) unstable; urgency=low
+
+  * 00_base/26check_logfiles_general: Added some more files to the
+    ignore list (Bug #35881)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sun, 12 Oct 2014 14:35:23 +0200
+
 ucs-test (5.0.21-1) unstable; urgency=low
 
   * 00_base/25check-permissions: adjust to UCS 4.0 (Bug #35880)
