Bug #35900, #35909: add package dependency to univention-squid and more printed debug info
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54352 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.170-1) unstable; urgency=low
+
+  * Bug #35900: add filter by name and more printed debug info
+  * Bug #35909: add package dependency to univention-squid
+
+ -- Ammar Najjar <najjar@univention.de>  Mon, 13 Oct 2014 11:46:34 +0200
+
 ucs-test (4.0.169-1) unstable; urgency=low
 
   * Bug #35900: add some printed debug info
