weekly rotate dh parameters (Bug #35923)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54355 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (8.0.13-6) unstable; urgency=low
+
+  * weekly rotate dh parameters (Bug #35923) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 13 Oct 2014 13:34:44 +0200
+
 univention-mail-postfix (8.0.13-5) unstable; urgency=low
 
   * added cron job for re-creating dh parameter files (Bug #35923) 
