weekly rotate dh parameters (Bug #35923)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54357 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (9.0.0-8) unstable; urgency=low
+
+  * weekly rotate dh parameters (Bug #35923) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 13 Oct 2014 13:38:04 +0200
+
 univention-mail-postfix (9.0.0-7) unstable; urgency=low
 
   * remove old ucr templates (Bug #35264)
