--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (11.0.6-4) unstable; urgency=medium
+
+  * Bug #31907: Work around ITS#4025
+
+ -- Arvid Requate <requate@univention.de>  Mon, 13 Oct 2014 14:43:19 +0200
+
 univention-ldap (11.0.6-3) unstable; urgency=low
 
   * Bug #31907: Fix UCS standard DN for the "ppolicy_default" LDAP object
