* Bug #36095: let umc/app/CategoryButton depend on dijit/form/Button
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54363 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.38-1) unstable; urgency=medium
+
+  * Bug #36095: let umc/app/CategoryButton depend on dijit/form/Button
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 13 Oct 2014 16:30:37 +0200
+
 univention-management-console-frontend (4.1.37-1) unstable; urgency=low
 
   * Bug #35654: fix rerendering of categories on app.reloadModules()
