* Adapt instance creation page layout (Bug #36142)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54364 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.3-3) unstable; urgency=low
+
+  * Adapt instance creation page layout (Bug #36142) 
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 13 Oct 2014 17:13:45 +0200
+
 univention-virtual-machine-manager-daemon (4.0.3-2) unstable; urgency=low
 
   * hide unavailable cloud connections in create instance wizard (Bug #36093)
