* Bug #35319: 10_ldap/60failedldif: Use restart again
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54367 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.23-1) unstable; urgency=medium
+
+  * Bug #35319: 10_ldap/60failedldif: Use restart again
+
+ -- Arvid Requate <requate@univention.de>  Mon, 13 Oct 2014 18:25:55 +0200
+
 ucs-test (5.0.22-1) unstable; urgency=low
 
   * 00_base/26check_logfiles_general: Added some more files to the
