--- a/base/univention-system-setup/usr/share/locale/de/LC_MESSAGES/univention-system-setup-scripts.po
+++ b/base/univention-system-setup/usr/share/locale/de/LC_MESSAGES/univention-system-setup-scripts.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-24 14:39+0200\n"
+"POT-Creation-Date: 2014-10-13 18:28+0200\n"
 "PO-Revision-Date: 2012-02-20 14:41+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -11,15 +11,15 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: usr/lib/univention-system-setup/scripts/setup-join.sh:167
+#: usr/lib/univention-system-setup/scripts/setup-join.sh:169
 msgid "Domain join"
 msgstr "Domänenbeitritt"
 
-#: usr/lib/univention-system-setup/scripts/setup-join.sh:173
+#: usr/lib/univention-system-setup/scripts/setup-join.sh:175
 msgid "Preparing domain join"
 msgstr "Vorbereitung des Domänenbeitritts"
 
-#: usr/lib/univention-system-setup/scripts/setup-join.sh:212
+#: usr/lib/univention-system-setup/scripts/setup-join.sh:214
 msgid "Configure"
 msgstr "Einrichten von"
 
@@ -87,24 +87,141 @@ msgstr "Einrichten der Zeitzonen"
 msgid "Generating SSL certificate"
 msgstr "Erstellen der SSL-Zertifikate"
 
-#: usr/lib/univention-system-setup/scripts/50_software/20upgrade:41
+#: usr/lib/univention-system-setup/scripts/90_postjoin/20upgrade:41
 msgid "Upgrading the system"
 msgstr "Aktualisiere das System"
 
-#: usr/lib/univention-system-setup/scripts/50_software/20upgrade:42
+#: usr/lib/univention-system-setup/scripts/90_postjoin/20upgrade:42
 msgid "This might take a while depending on the number of pending updates."
 msgstr ""
 "Abhängig von der Anzahl der austehenden Updates, kann dies einige Zeit "
 "dauern."
 
-#~ msgid "Configuring IPv4 network devices"
-#~ msgstr "Einrichten der IPv4-Netzwerkgeräte"
+#: usr/lib/univention-system-setup/scripts/05_role/10role:40
+msgid "Configuring server role"
+msgstr "Einrichten der Systemrolle"
+
+#: usr/lib/univention-system-setup/scripts/30_net/10interfaces:58
+msgid "Configuring IPvX network interfaces"
+msgstr "Einrichten der IPvX-Netzwerkgeräte"
+
+#: usr/lib/univention-system-setup/scripts/50_software/10software:37
+msgid "Configuring software components"
+msgstr "Einrichten der Software-Komponenten"
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:39
+msgid "Configuring Active Directory connection"
+msgstr "Einrichten der Active-Directory-Verbindung"
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:70
+msgid "Configuring time synchronization..."
+msgstr "Einrichten der Zeitsynchronisation..."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:74
+msgid "Configuring DNS server..."
+msgstr "Einrichten des DNS-Servers..."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:78
+msgid "Configuring Kerberos settings..."
+msgstr "Einrichten von Kerberos-Einstellungen..."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:82
+msgid "Configuring Administrator account..."
+msgstr "Einrichten des Administrator-Kontos..."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:85
+msgid "Configuring reverse DNS settings..."
+msgstr "Einrichten von Reverse-DNS-Einstellungen..."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:88
+msgid "Configuring software components..."
+msgstr "Einrichten von Softwarekomponenten..."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:100
+msgid "An error occurred while installing necessary software components."
+msgstr ""
+"Ein Fehler trat während der Installation von notwendigen Softwarekomponenten "
+"auf."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:101
+msgid "Configuring synchronization from AD..."
+msgstr "Einrichten der Synchronisation von AD..."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:105
+msgid "Renaming well known SID objects..."
+msgstr "Umbennen bekannter SID-Objekte..."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:108
+msgid "Running Samba join script..."
+msgstr "Ausführen des Samba Join-Skripts..."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:111
+msgid "Configuring DNS entries..."
+msgstr "Einrichten von DNS-Einträgen..."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:116
+msgid "Starting Active Directory connection service..."
+msgstr "Active Directory-Verbindungsdienst wird gestartet..."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:119
+msgid "Registering LDAP service entry..."
+msgstr "Registrierung von LDAP-Service-Einträgen..."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:122
+msgid "Join has been finished successfully."
+msgstr "Der Domänenbeitritt wurde erfolgreich abgeschlossen."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:125
+msgid "The AD member mode can only be configured on a DC master server."
+msgstr ""
+"Der AD-Member-Modus kann nur auf einem DC-Master-System konfiguriert werden."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:127
+#, python-format
+msgid ""
+"Could not connect to AD Server %s. Please verify that the specified address "
+"is correct."
+msgstr ""
+"Eine Verbindung zum AD-Server %s konnte nicht hergestellt werden. Bitte "
+"überprüfen Sie, ob die angegebene Adresse korrekt ist."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:129
+#, python-format
+msgid ""
+"The domain name of the AD Server (%(ad_domain)s) does not match the local "
+"UCS domain name (%(ucs_domain)s). For the AD member mode, it is necessary to "
+"setup a UCS system with the same domain name as the AD Server."
+msgstr ""
+"Der Domänenname des AD-Servers (%(ad_domain)s) unterscheidet sich von der "
+"lokalen UCS-Domäne ((%(ucs_domain)s).Für den AD-Member-Modus ist es "
+"notwendig, ein UCS-System mit dem gleichen Domänennamen wie der AD-Server "
+"aufzusetzen."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:131
+#, python-format
+msgid ""
+"Could not connect to AD Server %s. Please verify that username and password "
+"are correct."
+msgstr ""
+"Eine Verbindung zum AD-Server %s konnte nicht hergestellt werden. Bitte "
+"überprüfen Sie Benutzername und Password."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:133
+msgid ""
+"Failed to set the password of the UCS Administrator to the Active Directory "
+"Administrator password."
+msgstr ""
+"Eine Verbindung zum AD-Server %s konnte nicht hergestellt werden. Bitte "
+"überprüfen Sie Benutzername und Passwort."
+
+#: usr/lib/univention-system-setup/scripts/90_postjoin/10admember:135
+#, python-format
+msgid ""
+"Could not synchronize the time between the UCS system and the Active "
+"Directory domain controller: %s"
+msgstr ""
+"Die Zeit zwischen dem UCS-System und dem Active Directory Domänencontroller "
+"konnte nicht synchronisiert werden: %s"
 
 #~ msgid "Configure IPv6 network devices"
 #~ msgstr "Einrichten der IPv6-Netzwerkgeräte"
-
-#~ msgid "Configuring server role"
-#~ msgstr "Einrichten der Systemrolle"
-
-#~ msgid "Configuring software components"
-#~ msgstr "Einrichten der Software-Komponenten"
