--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (10.0.15-2) unstable; urgency=medium
+
+  * new univention.lib.account helper module for OpenLDAP ppolicy
+    (Bug #31907)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 13 Oct 2014 19:13:38 +0200
+
 univention-directory-manager-modules (10.0.15-1) unstable; urgency=medium
 
   * Bug #36101: Extend the ipProtocolSRV syntax for new SRV records
