--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (10.0.15-3) unstable; urgency=medium
+
+  * Bug #31907: pass DN instead of uid
+
+ -- Arvid Requate <requate@univention.de>  Mon, 13 Oct 2014 21:04:20 +0200
+
 univention-directory-manager-modules (10.0.15-2) unstable; urgency=medium
 
   * new univention.lib.account helper module for OpenLDAP ppolicy
