* Bug #35653: Autoset domainname from checking credentials
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54371 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.10-5) unstable; urgency=low
+
+  * Bug #35653: Autoset domainname from checking credentials
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 13 Oct 2014 23:29:12 +0200
+
 univention-system-setup (8.1.10-4) unstable; urgency=low
 
   * Bug #35550: Fix localization of python setup scripts
