Bug #35900: use utc time instead of local time
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54378 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.171-1) unstable; urgency=low
+
+   * Bug #35900: use utc time instead of local time
+
+ -- Ammar Najjar <najjar@univention.de>  Tue, 14 Oct 2014 10:42:01 +0200
+
 ucs-test (4.0.170-1) unstable; urgency=low
 
   * Bug #35900: add filter by name and more printed debug info
