--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.24-1) unstable; urgency=low
+
+  * Bug #35900: use utc time instead of local time
+
+ -- Ammar Najjar <najjar@univention.de>  Tue, 14 Oct 2014 10:43:41 +0200
+
 ucs-test (5.0.23-1) unstable; urgency=medium
 
   * Bug #35319: 10_ldap/60failedldif: Use restart again
