--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.40-1) unstable; urgency=low
+
+  * Bug #35654: fix background of login dialog
+
+ -- Florian Best <best@univention.de>  Tue, 14 Oct 2014 10:49:36 +0200
+
 univention-management-console-frontend-theme (0.0.39-1) unstable; urgency=medium
 
   * Bug #35654: adjust background gradient, fix RadioButton/CheckBox margins
