--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-daemon (4.0.3-4) unstable; urgency=low
+
+  * Log traceback in case an error occurs (Bug #36136)
+  * Supply a last_error_message variable the frontend can evaluate
+
+ -- Erik Damrose <damrose@univention.de>  Tue, 14 Oct 2014 11:20:25 +0200
+
 univention-virtual-machine-manager-daemon (4.0.3-3) unstable; urgency=low
 
   * Adapt instance creation page layout (Bug #36142) 
