--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.41-1) unstable; urgency=low
+
+  * Bug #35654: don't overlap the context menu icon in gallery panes
+
+ -- Florian Best <best@univention.de>  Tue, 14 Oct 2014 11:56:38 +0200
+
 univention-management-console-frontend-theme (0.0.40-1) unstable; urgency=low
 
   * Bug #35654: fix background of login dialog
