* Bug #35654: use onClick instead of callback for CategoryButtons as it now inherits from dijit/form/Button
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54386 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (4.1.40-1) unstable; urgency=low
+
+  * Bug #35654: use onClick instead of callback for CategoryButtons as it now inherits
+  	from dijit/form/Button
+
+ -- Florian Best <best@univention.de>  Tue, 14 Oct 2014 11:59:40 +0200
+
 univention-management-console-frontend (4.1.39-1) unstable; urgency=low
 
   * Bug #35654: remove Form.scrollable, fix background of login dialog while
