--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (10.0.15-4) unstable; urgency=medium
+
+  * Bug #31907: Allow passing of timestamp to univention.lib.account.lock
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Oct 2014 12:02:20 +0200
+
 univention-directory-manager-modules (10.0.15-3) unstable; urgency=medium
 
   * Bug #31907: pass DN instead of uid
