* Bug #31907: Work around ITS#4025
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54388 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-replication/debian/changelog
+++ b/management/univention-directory-replication/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-replication (8.0.2-2) unstable; urgency=medium
+
+  * Bug #31907: Work around ITS#4025
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Oct 2014 12:05:13 +0200
+
 univention-directory-replication (8.0.2-1) unstable; urgency=medium
 
   * exclude operational ppolicy attributes from schema replication
