* Bug #36113: Work around ITS#4025
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54389 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-replication/debian/changelog
+++ b/management/univention-directory-replication/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-replication (7.0.1-11) unstable; urgency=medium
+
+  * Bug #36113: Work around ITS#4025
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Oct 2014 12:09:35 +0200
+
 univention-directory-replication (7.0.1-10) unstable; urgency=medium
 
   * Bug #36113: Update replication.py to filter operational ppolicy
