* Bug #35654: remove Form.scrollable in module templates, fix favorites for root user
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54395 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console (7.1.12-1) unstable; urgency=low
+
+  * Bug #35654: remove Form.scrollable in module templates, fix favorites for
+  	root user
+
+ -- Florian Best <best@univention.de>  Tue, 14 Oct 2014 13:22:35 +0200
+
 univention-management-console (7.1.11-1) unstable; urgency=low
 
   * Bug #35654: fix server crash when some category XML definition contains a
