--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.10-6) unstable; urgency=low
+
+  * Bug #35653: Fix translations
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 14 Oct 2014 13:49:06 +0200
+
 univention-system-setup (8.1.10-5) unstable; urgency=low
 
   * Bug #35653: Autoset domainname from checking credentials
