--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (10.0.15-6) unstable; urgency=medium
+
+  * Bug #31907: Make udm users/user posix/all unlock remove the ppolicy
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Oct 2014 14:48:22 +0200
+
 univention-directory-manager-modules (10.0.15-5) unstable; urgency=medium
 
   * Bug #31907: Make udm users/user posix/all unlock remove the ppolicy
