Bug #36086 USS: Generate UCR configuration before USS
Move ucr commit before launching univention-system-setup-boot

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54399 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.11-1) unstable; urgency=low
+
+  * Bug #36086: Generate UCR configuration before USS.
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 14 Oct 2014 07:29:58 +0200
+
 univention-system-setup (8.1.10-6) unstable; urgency=low
 
   * Bug #35653: Fix translations
