Bug #36116: Disable online repository until after USS
Only enable online repository after univention-system setup has run.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54401 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,6 +1,7 @@
 univention-system-setup (8.1.11-1) unstable; urgency=low
 
   * Bug #36086: Generate UCR configuration before USS.
+  * Bug #36116: Disable online repository until after USS.
 
  -- Philipp Hahn <hahn@univention.de>  Tue, 14 Oct 2014 07:29:58 +0200
 
