--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -3,6 +3,7 @@ univention-system-setup (8.1.11-1) unstable; urgency=low
   * Bug #36086: Generate UCR configuration before USS.
   * Bug #36116: Disable online repository until after USS.
   * Bug #35919: Disable Alt-Tab.
+  * Bug #35727: Remove USS-boot after successful run.
 
  -- Philipp Hahn <hahn@univention.de>  Tue, 14 Oct 2014 07:29:58 +0200
 
