* Bug #31907: Reduce pwdFailureCountInterval to 15 minutes
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54405 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (11.0.6-6) unstable; urgency=medium
+
+  * Bug #31907: Reduce pwdFailureCountInterval to 15 minutes
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Oct 2014 15:29:59 +0200
+
 univention-ldap (11.0.6-5) unstable; urgency=medium
 
   * Bug #31907: Don't configure pwdLockoutDuration, automatic unlocking
