* Bug #35653: Fix network page's values not being considered in debian installer mode
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54407 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.1.11-2) unstable; urgency=low
+
+  * Bug #35653: Fix network page's values not being considered in debian
+    installer mode
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 14 Oct 2014 15:35:33 +0200
+
 univention-system-setup (8.1.11-1) unstable; urgency=low
 
   * Bug #36086: Generate UCR configuration before USS.
