Bug #35656 Update: Block update with xen-4.1 still installed
Prevent upgrade while xen-4.1 from UCS is still installed.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54408 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.7-2) unstable; urgency=low
+
+  * Bug #35656: Block update with xen-4.1 still installed.
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 14 Oct 2014 15:46:33 +0200
+
 univention-updater (10.0.7-1) unstable; urgency=low
 
   * Bug #36116: Disable online repository until after USS.
