Bug #35727 USS: Remove USS-boot after successful run
For aptitude to run non-interactively.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54409 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.12-1) unstable; urgency=low
+
+  * Bug #35727: Remove USS-boot after successful run.
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 14 Oct 2014 16:02:40 +0200
+
 univention-system-setup (8.1.11-2) unstable; urgency=low
 
   * Bug #35653: Fix network page's values not being considered in debian
