* Added functionality to test a new connection before adding it to the connection pool (Bug #36134) LDAP connections are always added without testing. Expanded the cloud_add interface to support the testconnection=False parameter, which will add a connection without testing.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54410 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,13 @@
+univention-virtual-machine-manager-daemon (4.0.3-5) unstable; urgency=low
+
+  * Added functionality to test a new connection before adding it to the
+    connection pool (Bug #36134)
+    LDAP connections are always added without testing. Expanded the cloud_add
+    interface to support the testconnection=False parameter, which will add
+    a connection without testing.
+
+ -- Erik Damrose <damrose@univention.de>  Tue, 14 Oct 2014 16:11:28 +0200
+
 univention-virtual-machine-manager-daemon (4.0.3-4) unstable; urgency=low
 
   * Log traceback in case an error occurs (Bug #36136)
