* Bug #35654: attempt to fix placeholder in IE9
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54411 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.42-1) unstable; urgency=low
+
+  * Bug #35654: attempt to fix placeholder in IE9
+
+ -- Florian Best <best@univention.de>  Tue, 14 Oct 2014 16:20:22 +0200
+
 univention-management-console-frontend (4.1.41-1) unstable; urgency=low
 
   * Bug #35654: adjust size of module search in relation to drop down menus
