* Test for Bug #31907
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54415 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.25-1) unstable; urgency=medium
+
+  * Test for Bug #31907
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Oct 2014 17:37:27 +0200
+
 ucs-test (5.0.24-1) unstable; urgency=low
 
   * Bug #35900: use utc time instead of local time
