--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.8-1) unstable; urgency=low
+
+  * Bug #35654: Form.scrollable is obsolete
+
+ -- Florian Best <best@univention.de>  Tue, 14 Oct 2014 18:21:36 +0200
+
 univention-updater (10.0.7-2) unstable; urgency=low
 
   * Bug #35656: Block update with xen-4.1 still installed.
