* Bug #35654: UMC design adaptions
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54419 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-mrtg/debian/changelog
+++ b/management/univention-management-console-module-mrtg/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-mrtg (3.1.2-2) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Tue, 14 Oct 2014 18:27:19 +0200
+
 univention-management-console-module-mrtg (3.1.2-1) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
