--- a/management/univention-management-console-module-reboot/debian/changelog
+++ b/management/univention-management-console-module-reboot/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-reboot (4.1.1-2) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Tue, 14 Oct 2014 18:27:46 +0200
+
 univention-management-console-module-reboot (4.1.1-1) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
