--- a/management/univention-system-info/debian/changelog
+++ b/management/univention-system-info/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-info (5.1.0-3) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Tue, 14 Oct 2014 18:30:34 +0200
+
 univention-system-info (5.1.0-2) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
