--- a/management/univention-management-console-module-top/debian/changelog
+++ b/management/univention-management-console-module-top/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-top (4.1.0-2) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Tue, 14 Oct 2014 18:31:24 +0200
+
 univention-management-console-module-top (4.1.0-1) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
