--- a/services/univention-pkgdb/debian/changelog
+++ b/services/univention-pkgdb/debian/changelog
@@ -1,3 +1,9 @@
+univention-pkgdb (8.1.0-4) unstable; urgency=low
+
+  * Bug #35654: UMC design adaptions
+
+ -- Florian Best <best@univention.de>  Tue, 14 Oct 2014 18:35:59 +0200
+
 univention-pkgdb (8.1.0-3) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
