* Bug #35654: first attempt to fix displaying of Grid when they are not actively rendered * fix focus of module search textbox
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54429 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-frontend (4.1.43-1) unstable; urgency=low
+
+  * Bug #35654: first attempt to fix displaying of Grid when they are not
+  	actively rendered
+  * fix focus of module search textbox
+
+ -- Florian Best <best@univention.de>  Tue, 14 Oct 2014 19:05:39 +0200
+
 univention-management-console-frontend (4.1.42-1) unstable; urgency=low
 
   * Bug #35654: attempt to fix placeholder in IE9
