--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,11 @@
+univention-system-setup (8.1.13-1) unstable; urgency=low
+
+  * Bug #35654: remove obsolete Form.scrollable, don't change wizard title to
+  	actual selected page, remove workaround for re-layouting of Grid, remove
+  	obsolete wizard_mode references
+
+ -- Florian Best <best@univention.de>  Tue, 14 Oct 2014 19:09:56 +0200
+
 univention-system-setup (8.1.12-1) unstable; urgency=low
 
   * Bug #35727: Remove USS-boot after successful run.
