* Bug #35654: fix page.onShow() event, fix reference to tools.umcpCommand
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54432 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (5.1.5-1) unstable; urgency=low
+
+  * Bug #35654: fix page.onShow() event, fix reference to tools.umcpCommand
+
+ -- Florian Best <best@univention.de>  Tue, 14 Oct 2014 19:34:25 +0200
+
 univention-management-console-module-udm (5.1.4-1) unstable; urgency=low
 
   * Bug #35654: display tree icons, move position/objecttype into left nav
