* Added a new UCR variable connector/ad/mapping/user/password/disabled   which allows the deactivation of the password synchronization   (Bug #35895)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54435 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,11 @@
+univention-ad-connector (8.0.17-73) unstable; urgency=medium
+
+  * Added a new UCR variable connector/ad/mapping/user/password/disabled
+    which allows the deactivation of the password synchronization
+    (Bug #35895)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 15 Oct 2014 06:45:20 +0200
+
 univention-ad-connector (8.0.17-72) unstable; urgency=medium
 
   * Feedback from QA (Bug #35602)
