--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,11 @@
+univention-ad-connector (9.0.5-1) unstable; urgency=medium
+
+  * Added a new UCR variable connector/ad/mapping/user/password/disabled
+    which allows the deactivation of the password synchronization
+    (Bug #35895)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 15 Oct 2014 06:45:20 +0200
+
 univention-ad-connector (9.0.4-1) unstable; urgency=low
 
   * Bug #35654: change handling of displaying helpText
