* Bug #35654: fix placeholder in IE9
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54444 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.44-1) unstable; urgency=low
+
+  * Bug #35654: fix placeholder in IE9
+
+ -- Florian Best <best@univention.de>  Wed, 15 Oct 2014 10:37:23 +0200
+
 univention-management-console-frontend (4.1.43-1) unstable; urgency=low
 
   * Bug #35654: first attempt to fix displaying of Grid when they are not
