--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.14-1) unstable; urgency=low
+
+  * Bug #35654: remove BasisPage
+
+ -- Florian Best <best@univention.de>  Wed, 15 Oct 2014 12:34:29 +0200
+
 univention-system-setup (8.1.13-1) unstable; urgency=low
 
   * Bug #35654: remove obsolete Form.scrollable, don't change wizard title to
