--- a/management/univention-management-console-module-mrtg/debian/changelog
+++ b/management/univention-management-console-module-mrtg/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-mrtg (3.1.3-1) unstable; urgency=low
+
+  * Bug #35654: left align title
+
+ -- Florian Best <best@univention.de>  Wed, 15 Oct 2014 13:13:00 +0200
+
 univention-management-console-module-mrtg (3.1.2-2) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
