--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.76-32) unstable; urgency=medium
+
+  * users/user: escape the share path filter (Bug #35953)
+  * univention.admin.filter: escape \ with \\
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 15 Oct 2014 14:07:31 +0200
+
 univention-directory-manager-modules (9.0.76-31) unstable; urgency=low
 
   * fixed krb5PrincipalName in macos.py (Bug #35526)
