--- a/base/univention-ssl/debian/changelog
+++ b/base/univention-ssl/debian/changelog
@@ -1,3 +1,10 @@
+univention-ssl (8.0.0-5) unstable; urgency=low
+
+  * new defaults for ssl/default/hashfunction (sha384)
+    and ssl/default/bits (2048) Bug #35836 #30545
+
+ -- Felix Botner <botner@univention.de>  Wed, 15 Oct 2014 14:13:24 +0200
+
 univention-ssl (8.0.0-4) unstable; urgency=low
 
   * set correct permissions for "/etc/univention/ssl" on certificate renewal (Bug #31941)
