--- a/management/univention-admingrp-user-passwordreset/debian/changelog
+++ b/management/univention-admingrp-user-passwordreset/debian/changelog
@@ -1,3 +1,9 @@
+univention-admingrp-user-passwordreset (5.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #36114) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 15 Oct 2014 14:48:25 +0200
+
 univention-admingrp-user-passwordreset (4.0.2-2) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30946)
