--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.3-6) unstable; urgency=low
+
+  * After libcloud update: Do not maintain own NodeState class (Bug #35824) 
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 15 Oct 2014 15:18:59 +0200
+
 univention-virtual-machine-manager-daemon (4.0.3-5) unstable; urgency=low
 
   * Added functionality to test a new connection before adding it to the
