* Update to UCS 4.0 (Bug #36114)   * removed ldap/acl/read/ips as slapd.conf now always     set rootdn
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54463 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap-overlay-memberof/debian/changelog
+++ b/management/univention-ldap-overlay-memberof/debian/changelog
@@ -1,3 +1,11 @@
+univention-ldap-overlay-memberof (7.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #36114) 
+  * removed ldap/acl/read/ips as slapd.conf now always
+    set rootdn
+
+ -- Felix Botner <botner@univention.de>  Wed, 15 Oct 2014 15:25:43 +0200
+
 univention-ldap-overlay-memberof (6.0.0-2) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30946)
