--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.44-1) unstable; urgency=medium
+
+  * Bug #35654: add media queries for dynamic grid height
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 15 Oct 2014 15:55:38 +0200
+
 univention-management-console-frontend-theme (0.0.43-1) unstable; urgency=low
 
   * Bug #35654: show a shadow arround the login messages
