--- a/services/univention-bacula/debian/changelog
+++ b/services/univention-bacula/debian/changelog
@@ -1,3 +1,9 @@
+univention-bacula (6.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #36114) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 15 Oct 2014 16:22:30 +0200
+
 univention-bacula (5.0.0-2) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30948)
