--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.8-1) unstable; urgency=low
+
+  * Bug #35654: move buttons and icon into left area
+
+ -- Florian Best <best@univention.de>  Wed, 15 Oct 2014 16:43:16 +0200
+
 univention-management-console-module-appcenter (4.1.7-1) unstable; urgency=low
 
   * Bug #35654: don't display icons of UCS compontents
